# schema_generator

./: .env  .gitignore  Cargo.toml  README.md  algorithm.rs  file_back_to_xml.xml  file_forestpropertydata.json  file_forestpropertydata.xml  file_structs.rs  forestpropertydata.xml  forestpropertydata_1.xml  forestpropertydata_2.xml  url_back_to_xml.xml  url_forestpropertydata.json  url_structs.rs
XML_Historiatiedot/: XML_MV_K3244F.xml  XML_MV_K3414E.xml  XML_MV_K3421B.xml  XML_MV_K3421F.xml  XML_MV_L3132A.xml
XML_Metsävarakuviot/: XML_MV_L5121E.xml  XML_MV_V4314F.xml  XML_MV_V5112F.xml
src/: create_structs.rs  de.rs  file_structs.rs  generate_string.rs  generate_xml.rs  json_utils.rs  keys.rs  lib.rs  main.rs  number.rs  results.rs  string_utils.rs  structs.rs  url_structs.rs
tests/: generate_string_test.rs  json_utils_test.rs  number_test.rs  other_test.rs  string_utils_test.rs
xml_schema_generator/: fetched_forest_property_data_option.rs  forest_property_data.rs
