[package]
name = "schema_generator"
version = "0.1.1"
authors = ["Marc Bäckman"]
license = "MIT"
description = "schema_generator is a Rust crate initially created for parsing XML files containing forestry data and generating corresponding Rust structs. It parses XML documents and automatically generates Rust data structures that map XML elements to fields, including attributes, child elements, and text content. It integrates with the serde library for serialization and deserialization. 
While it was originally designed for forestry-related XML data, it can be used with any XML data structure, making it a versatile tool for developers working with XML. Additionally, schema_generator supports JSON to XML conversion."
repository = "https://github.com/mabackma/schema_generator"
keywords = ["xml", "json", "rust", "parser"]
categories = ["parsing", "data-structures"]
edition = "2021"

[dependencies]
quick-xml = { version = "0.37.0", features = ["serialize"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
serde-xml-rs = "0.6.0"
regex = "1.11.1"
toml = "0.8.19"