[package]
name = "schema_generator"
version = "0.2.7"
authors = ["Marc Bäckman"]
license = "MIT"
description = "This crate is a part of the ClimateForest project, which takes place between 01.03.2024–28.02.2027. It is funded by Interreg Aurora and supported by its contributors, including Metsäkeskus, Lapland University of Applied Sciences, Luke luonnonvarakeskus, Luleå Tekniska Universitet, Skoggstyrelsen, and SLU."
repository = "https://github.com/mabackma/schema_generator"
keywords = ["xml", "structs", "json", "parser"]
categories = ["parsing", "data-structures"]
edition = "2021"

[dependencies]
quick-xml = { version = "0.37.0", features = ["serialize"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
serde-xml-rs = "0.6.0"
regex = "1.11.1"
toml = "0.8.19"

reqwest = { version = "0.12", features = ["blocking"] }
dotenv = "0.15.0"
once_cell = "1.20.2"